--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "webpack": "^1.14.0"
   },
   "devDependencies": {},
+  "engines": {
+    "node": "6.2.1",
+    "npm": "3.9.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "./node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
