--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "babel-preset-react": "^6.16.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-native-video": "^0.9.0",
+    "react-player": "^0.14.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-video": "^1.5.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.14.0"
