--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-react": "^6.16.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-modal": "^1.6.5",
     "react-native-video": "^0.9.0",
     "react-player": "^0.14.1",
     "react-redux": "^5.0.1",
