Fix style bugs / Update seed data

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ bundle.js.map
 .byebug_history
 .DS_Store
 npm-debug.log
-
+log/
+tmp/
+*.cache
 # Ignore application configuration
 /config/application.yml
